--- a/Editor/hdyar.osuimporter.editor.asmdef
+++ b/Editor/hdyar.osuimporter.editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:21f17aa433ef819448cc8a6e35ee9c24"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
